fixing overflow 7

--- a/styles.css
+++ b/styles.css
@@ -106,16 +106,16 @@ nav ul li a:hover {
 }
 
 .page-background::before {
-    width: 50px;
-    height: 50px;
+    width: 200px;
+    height: 200px;
     top: 10%;
     left: 10%;
     animation: moveShape 15s linear infinite;
 }
 
 .page-background::after {
-    width: 150px;
-    height: 150px;
+    width: 300px;
+    height: 300px;
     bottom: 10%;
     right: 10%;
     animation: moveShape 20s linear infinite;
